--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ tmp/*
 *.mo
 *.log
 *.db
+*.pyc
 db/
 test_db/
 .vagrant
@@ -22,4 +23,5 @@ test_db/
 *.sublime-workspace
 media/*
 static/*
+staticfiles/*
 base/static/bower*
