updating tox and travis
hopefully successful tests will be had

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django16, django17
+envlist = django16, django16
 
 [base]
 deps =
@@ -15,17 +15,17 @@ setenv =
 
 [testenv:django15]
 deps =
-    django>=1.6, <1.7
+    django>=1.5, <1.6
     {[base]deps}
 
 [testenv:django16]
 deps =
-    django>=1.7, <1.8
+    django>=1.6, <1.7
     {[base]deps}
 
 [testenv:coverage]
 commands =
-    coverage run --branch --omit={envdir}/*,test_app/*.py,*/migrations/*.py {envbindir}/django-admin.py test
+    coverage run --branch --omit={envdir}/*,*/migrations/*.py {envbindir}/django-admin.py test
     coveralls
 deps =
     coverage
