Adding test_app to run tests.

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
 
 [testenv:coverage]
 commands =
-    coverage run --branch --omit={envdir}/*,*/migrations/*.py {envbindir}/django-admin.py test
+    coverage run --branch --omit={envdir}/*,test_app/*.py,*/migrations/*.py {envbindir}/django-admin.py test
     coveralls
 deps =
     coverage
