--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,17 @@ deps =
     mox
     nose
     django-nose
+    django-crispy-forms
+    django-jinja
+    django-braces
+    django-extensions
+    django-mptt
+    South
 
 [testenv]
-commands = django-admin.py test
+commands =
+    django-admin.py syncdb --noinput
+    django-admin.py test
 setenv =
     DJANGO_SETTINGS_MODULE=test_app.settings
     PYTHONPATH={toxinidir}
