adding mptt urls and accounts to tox requirements

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ deps =
     django-braces
     django-extensions
     django-mptt
+    django-mptt-urls
+    django-user-accounts
     South
 
 [testenv]
