Moving towards specified settings loader, tweaking requirements
* vagrant now can specify settings to load based on django.requirements
pillar
* local_dist now used as a base for vagrant as well as a base for a
user’s local.py if developing locally
* adding non-private vagrant DB password and settings
* root requirement.txt now only for fabric command support. to get
local install use requirements/development.txt
* removing some heroku things

--- a/salt/roots/salt/toolhub/nginx.conf
+++ b/salt/roots/salt/toolhub/nginx.conf
@@ -7,10 +7,12 @@ server {
     location /static {
         expires off;
         alias {{ pillar['django']['path'] }}/toolhub/static;
+        access_log /var/log/nginx/static.log;
     }
     location /media {
         expires off;
         alias {{ pillar['django']['path'] }}/public/media;
+        access_log /var/log/nginx/static.log;
     }
 
     # location ~ /(static|media)/(.*)$ {
