Moving from django-jinja to jingo

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     nose
     django-nose
     django-crispy-forms
-    django-jinja
+    jingo
     django-braces
     django-extensions
     django-mptt
